--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
             border: none;
         }
 
+        
+        .theme-light #panel > div.status-new {
+            color: #000;
+            background: #c0eaff;
+            border: none;
+        }
+        
         .theme-light #panel > div.status-down {
             color: #FFF;
             background: #D81818;
