--- a/index.html
+++ b/index.html
@@ -54,7 +54,13 @@
             background: #FFF;
             border: 2px solid #DDD;
         }
-
+        
+        .theme-light #panel > div.status-new {
+            color: #000;
+            background: #c0eaff;
+            border: none;
+        }
+        
         .theme-light #panel > div.status-grace {
             color: #000;
             background: #FFAB00;
